# MiniConsole

./: .gitignore  CMakeLists.txt  README.md  highscores.txt
.github/workflows/: deploy-web.yml
cmake/web/: FindOpenGL.cmake
levels/: breakout_level1.txt  breakout_level2.txt  breakout_level3.txt  platformer_level1.txt  platformer_level2.txt  platformer_level3.txt  td_waves.txt
scripts/: build_vrsfml_web.sh  build_web.sh  package_web_site.sh
src/: main.cpp
src/core/: Application.cpp  Application.hpp  GameClock.hpp  GameDifficulty.hpp  GameState.hpp  HighScoreBoard.cpp  HighScoreBoard.hpp  SfmlCompat.hpp  SystemFont.hpp  Vec2.hpp
src/game/breakout/: BreakoutView.cpp  BreakoutView.hpp  BreakoutWorld.cpp  BreakoutWorld.hpp
src/game/minesweeper/: MinesweeperView.cpp  MinesweeperView.hpp  MinesweeperWorld.cpp  MinesweeperWorld.hpp
src/game/pacman/: PacmanView.cpp  PacmanView.hpp  PacmanWorld.cpp  PacmanWorld.hpp
src/game/platformer/: PlatformerView.cpp  PlatformerView.hpp  PlatformerWorld.cpp  PlatformerWorld.hpp
src/game/shooter/: ShooterView.cpp  ShooterView.hpp  ShooterWorld.cpp  ShooterWorld.hpp
src/game/towerdefense/: TowerDefenseView.cpp  TowerDefenseView.hpp  TowerDefenseWorld.cpp  TowerDefenseWorld.hpp
src/states/: BreakoutState.cpp  BreakoutState.hpp  HighScoresState.cpp  HighScoresState.hpp  MenuState.cpp  MenuState.hpp  MinesweeperState.cpp  MinesweeperState.hpp  PacmanState.cpp  PacmanState.hpp  PlatformerState.cpp  PlatformerState.hpp  ShooterState.cpp  ShooterState.hpp  StubGameState.cpp  StubGameState.hpp  TowerDefenseState.cpp  TowerDefenseState.hpp
web/: shell_miniconsole.html
